--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,700;1,700&family=Roboto:wght@400;700&display=swap');
+
 @import "tailwindcss";
 
 @plugin "tailwindcss-animate";
@@ -88,6 +90,24 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+}
+
+@theme{
+  --font-roboto: 'Roboto', sans-serif;
+  --font-robotoMono: 'Roboto Mono', sans-serif;
+  --font-poppins: 'Poppins', sans-serif;
+
+  --animate-slideIn: slideIn 0.3s ease-in-out;
+  @keyframes slideIn {
+    from {
+      transform: translate3d(-10%, 0, 0);
+      opacity: 0%;
+    }
+    to {
+      transform: translateX(0px, 0px, 0px);
+      opacity: 100%;
+    }
+  }
 }
 
 @layer base {
