--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,19 @@
       opacity: 100%;
     }
   }
+
+  --animate-gradientMove: gradientMove 6s ease infinite;
+  @keyframes gradientMove {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 }
 
 @layer base {
